fix: clean landing files

--- a/404.html
+++ b/404.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tandaly LLC — Group Savings & Coordination</title>
-
-  <!-- Optional: keep your FB verification here too (DNS already OK) -->
-  <meta name="facebook-domain-verification" content="wegeo949yzvx92swu7bgbkrfookkzt" />
-
   <meta name="description" content="Tools for savings groups to track contributions, schedule turns, and manage payouts securely." />
+  <!-- Optional: FB domain verification (DNS already set, but safe to keep) -->
+  <meta name="facebook-domain-verification" content="wegeo949yzvx92swu7bgbkrfookkzt" />
   <meta property="og:title" content="Tandaly LLC — Group Savings & Coordination" />
   <meta property="og:description" content="Tools for savings groups to track contributions, schedule turns, and manage payouts securely." />
   <meta property="og:type" content="website" />
